metrics-pipeline/otel-collector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaia-otel-collector
  namespace: gaia-metrics
spec:
  rules:
    - host: otel.gerardosalazar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaia-otel-collector
                port:
                  number: 4318
